// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggleCanVote emits error when user does not have CAN_VOTE permission 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Array [],
      "error": "User is not a member and therefore isn't allowed to vote",
      "type": "TOGGLE_CAN_VOTE",
    },
  ],
]
`;

exports[`toggleCanVote emits error when user does not have CAN_VOTE permission 2`] = `Array []`;

exports[`toggleCanVote emits toggled can vote action on success 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "123",
        "canVote": false,
      },
      "type": "TOGGLE_CAN_VOTE",
    },
  ],
]
`;

exports[`toggleCanVote emits toggled can vote action on success 2`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "123",
        "canVote": false,
      },
      "type": "TOGGLE_CAN_VOTE",
    },
  ],
]
`;
